--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <main>
 
         <div id="infos_iniciais">
-            <img id="img_ceira" src="img/ceira_bot_foto.png">
+            <img id="img_ceira" src="img/ceira_bot_foto_nao_transparente.jpeg">
 
             <div id="descri_top">
                 <p id="descri_aln">Bot criado para moderação e diversão, e com a sua permissão, posso ajudar em vários
